# django_cowsay

./: db.sqlite3  pyproject.toml
django_cowsay/: settings.py  urls.py
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_cow_cow.py
templates/: cow.html  history.html
