[tool.poetry]
name = "django_cowsay"
version = "0.1.0"
description = "Text to Cowsay"
authors = ["Tim Hindman <timmyturner45@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
